# termiNet_backend

./: .env  .gitignore  CMakeLists.txt  README.md  main.cpp
db/categories/: category_repo.cpp  category_repo.h
db/community/: community_repo.cpp  community_repo.h
db/login/: login_repository.cpp  login_repository.h
db/manager/: connection_manager.cpp  connection_manager.h
db/message/: message_repository.cpp  message_repository.h
db/search/: search_repo.cpp  search_repo.h
db/threads/: thread_repo.cpp  thread_repo.h
db/users/: user_repository.cpp  user_repository.h
helpers/: AppHelper.cpp  AppHelper.h  ResponseHelper.h  Responsehelper.cpp
services/category/: category.cpp  category.h
services/community/: community.cpp  community.h
services/login/: login.cpp  login.h
services/routing/: routing.cpp  routing.h
services/search/: search.cpp  search.h
services/threads/: threads.cpp  threads.h
services/users/: users.cpp  users.h
sql/: hash_password.sql  login_check.sql  new_thread.sql  new_user.sql  run_all.sql  schema.sql  sequence_generators.sql  triggers.sql
